--- a/redux-1/package.json
+++ b/redux-1/package.json
@@ -8,7 +8,7 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
-    "react-scripts": "1.1.0"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
