--- a/http-server-ajax/package.json
+++ b/http-server-ajax/package.json
@@ -10,7 +10,7 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "react-scripts": "1.1.0"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
