--- a/my-app/package.json
+++ b/my-app/package.json
@@ -35,13 +35,13 @@
     "radium": "^0.21.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
-    "react-dev-utils": "^6.1.1",
+    "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
