--- a/redux-1/package.json
+++ b/redux-1/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^6.0.0",
     "redux": "^3.7.2"
   },
   "devDependencies": {
