--- a/challange-5/package.json
+++ b/challange-5/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.6.3",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
-    "react-scripts": "1.0.13",
+    "react-scripts": "^1.0.13",
     "redux": "^4.0.1"
   },
   "scripts": {
