--- a/webpack/package.json
+++ b/webpack/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.5"
+  },
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1"
   }
 }
