--- a/webpack/package.json
+++ b/webpack/package.json
@@ -16,6 +16,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^3.12.0",
